# METR-timehorizons-by-domain

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  pyproject.toml
.github/workflows/: update.yml
data/: benchmarks.yaml
data/processed/: fits.json  transform_summary.json  update_log.md
data/snapshots/: fits_20260213T112850Z.json  fits_20260213T120056Z.json  fits_20260213T125921Z.json  fits_20260213T132915Z.json  fits_20260213T143811Z.json  fits_20260213T152534Z.json  fits_20260213T174141Z.json  fits_20260214T194528Z.json  fits_20260214T213315Z.json  fits_20260214T213641Z.json  fits_20260214T214206Z.json  fits_20260214T214247Z.json  fits_20260214T220530Z.json  fits_20260214T221742Z.json  fits_20260216T065633Z.json  fits_20260216T202447Z.json  fits_20260223T065747Z.json  fits_20260223T191649Z.json  fits_20260223T193251Z.json
data/sources/: index.json  metr_release_dates.yaml
docs/: upstream-pr-draft.md
docs/brainstorm/: &lt;q&gt;3. Domain-Specific Time Horizon Tracker_W.md  &lt;q&gt;🚀 Next Steps_Want to proceed with this_ I.md  CONTRIBUTING.md  Ok, for a long time I didn't do any open source pr.md  README.md
exported-assets/: script.py
pipeline/: __init__.py  changelog.py  charts.py  common.py  export.py  fit.py  ingest.py  transform.py
site/: app.js  data.json  index.html  styles.css
tests/: test_fit.py  test_transform.py
